# FloTorch

./: Makefile  install.md  make.Dockerfile  provision.sh  pyproject.toml  requirements.txt
.envs/: demoto.json  harsha.json
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checkov-scan.yml  cleanup-resources.yml
Jenkins/: Jenkinsfile.imagepush
app/: configuration_validation.py  main.py  orchestrator.py  price_calculator.py  requirements.txt  seed_data.py
app/dependencies/: database.py
app/routes/: config.py  execution.py  experiment.py  expert_eval.py  human_eval.py
baseclasses/: base_classes.py
cdk/: deploy.sh
cdk/vpc/: vpc_stack.py
cfn/: app-runner-template.yaml  docker-enterprise-setup.yaml  dynamodb-template.yaml  ec2-instance-template.yaml  ecr-repository-template.yaml  ecs-template.yaml  iam-template.yaml  kubernetes-setup-template.yaml  lambda-template.yaml  master-template.yaml  state-machine-template.yaml  vpc-template.yaml
charts/: index.yaml
charts/flotorch/: Chart.yaml  DEPLOYMENT.md  clean-postgres.sh  ec2-deploy.sh  ecr-auth.sh  values.yaml
config/: experimental_config.py
constants/: time_constants.py  validation_status.py
core/: dynamodb.py
core/chunking/: chunker.py
core/embedding/: embedding_factory.py
core/processors/: embed_processor.py
indexing/: indexing.py
lambda_handlers/: evaluation_handler.py  retriever_handler.py
retriever/: Dockerfile  retriever.py
tests/: test_chunker.py  test_embed.py
util/: bedrock_utils.py  boto3_utils.py  guard_rails_utils.py  pdf_utils.py
(+62 files in other folders)
